--- a/client/package.json
+++ b/client/package.json
@@ -1,26 +1,17 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.1",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "dotenv": "^16.0.3",
-    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.1.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
