--- a/server/package.json
+++ b/server/package.json
@@ -5,5 +5,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5"
+  },
+  "scripts": {
+    "start": "nodemon index.js"
   }
 }
