--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.3",
     "pg": "^8.11.5",
     "react-router-dom": "^6.23.0"
   },
