--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "proxy": "http://localhost:8081",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +19,7 @@
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "vm2": "^3.9.19",
     "web-vitals": "^2.1.4"
