--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "codeflask": "^1.4.1",
     "fs": "^0.0.1-security",
+    "marked": "^12.0.2",
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
