--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,16 @@
     "codeflask": "^1.4.1",
     "fs": "^0.0.1-security",
     "marked": "^12.0.2",
+    "monaco-editor": "^0.49.0",
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^10.0.5",
     "vm2": "^3.9.19",
     "web-vitals": "^2.1.4"
