--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,12 @@
 {
+
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
@@ -10,8 +18,5 @@
     "nodemon": "^3.1.3",
     "pg": "^8.11.5",
     "react-router-dom": "^6.23.0"
-  },
-  "scripts": {
-    "start": "nodemon index.js"
   }
 }
